--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,8 +18,7 @@
     <meta property="og:site_name" content="viajes y carreras">
     <meta property="og:url" content="">
     <meta property="og:type" content="blog">
-    <meta property="og:image"
-        content="https://lh3.googleusercontent.com/pw/AIL4fc9roUmkKocc_K1wg1U8PTJYwLEhgZMbVFPT3vr0dT15SRBl35oq8ft5EbFJYz_edZAEnUK38fB9CHTr-jNT4XCtWYLSyuuImQY0OoNDdsW_GQQ7lENnnv7OkNq2vOTg-4R0rJeWfKnnaXEMa9hhkTXI80lbHxnA8U00hVmOQ2vQwF5Wh1AOYE9yKGHuoI6cMoDPqcVjt99zX8RrctsZvdgQrhQ8Esfst4CCaNQ4fogarKe7ZGyN2WJmT8sAvLK8QQMdGedWdXIPtXBZNvktYui-g70mnfATF8zZhBbDRQmNSF1YAf5MDmzkFIbX4kh946-C3Fs4q-MODiDSzHz3W7b2np4ucDWNYntB4nYCI0AQGJDYZN47-Uzd1TZ04z-nmdaczyX_pceeXlCDBXvZpJbsisc4T4KSAi8loDyAupC_4EPYCv4j-tc_v_1XTT0-a96cugxFyFqtK328Wn0wOXT9xMRJT9OtEckri1QR0llW6S9VU0uJmPja7ljC1NtCQghiMjptd2pan7PgzG8XH-TSuUxISOwup34V98rIw25yt-Ci6HyjKcXewoSHWtQgvVGkhW4MWyIAFMQsklozzgeweR6lFGRE8uvvNFCmu3OaUvZDBV7pi6bjbINX7Ih98iCKQPzLo1hU1TgqaT47-KrVlct7GRMcJlPyBckIYuOIraTNmWW3s-EXE8Ht6Yx5eAp3WUy8_pmuUSm3dusdLh0KHKdxlvsVABDE-a9vWN9lfRFvHlA9iSxFQfUn9K6k9N4QcMAywrdYiPoHsPTZEOYrto17c_ZBoI-CAAj7_Fdz4DSmsbNLjYa2l00rBW5vH9O5SQbH_iu5DLSLq6LKm6Gh4a2m_stHrt2VJ9mnUIY8SWnhYRoqvbyojce1sexmY1cFcJBqb0Q-j8IyZDJEHA=w500-h500-s-no?authuser=0">
+    <meta property="og:image" content="https://postimg.cc/jD7WQwR0">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:alt"
         content=" logo que incluye la Frase: una ruta de escape con un dibujo de una moto y un avion de papel">
@@ -41,7 +40,7 @@
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
                     <h1 class="navbot">Una Ruta de Escape</h1>
-                    <button class="navbar-toggler" type="button $pink-200" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    <button class="navbar-toggler" type="button"  style="color:antiquewhite" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon s"></span>
                     </button>
