--- a/pages/carreras.html
+++ b/pages/carreras.html
@@ -102,7 +102,7 @@
 
         <section>
             <div class="titulos-h2">
-                <h2>CARRERAS DE MARKETING DIGITAL</h2>
+                <h3>CARRERAS DE MARKETING DIGITAL</h3>
 
             </div>
 
@@ -191,7 +191,8 @@
 
 
             <div class="titulos-h2 ">
-                <h2>CARRERAS DE DESARROLLO WEB Y PROGRAMACION</h2>
+                <h3>CARRERAS DE DESARROLLO WEB Y PROGRAMACION <br>
+                <br><p>Aplicando este código: ref.leiza.8a1b TENES UN 15% DE DESCUENTO en cualquier Curso o Carrera de Coderhouse! </p></h3>
 
             </div>
 
