--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,8 +67,9 @@
         <div class="blog"><h3>CONTACTO</h3></div>
 
         <div class="texto">
-            <p>Ante cualquier duda/pregunta o info sobre viajes, podes escribirme a cualquier red social! También
-                publicó tips de idiomas, tips de viajes y mis viajes! </p>
+            <p>Ante cualquier duda/pregunta, info o asesoramiento sobre VIAJES, CARRERAS, VOLUNTARIADOS O WORK AND HOLIDAYS, podes escribirme a cualquier red social, ahi también
+                publicó tips de idiomas, tips de viajes y mis viajes!<br> <h3>y Aplicando este código: ref.leiza.8a1b TENES UN 15% DE DESCUENTO en cualquier Curso o Carrera de Coderhouse! </h3></p>
+            
             <div class="iconos-grid">
                 <div class="item1"><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><img src="../assets/img/gmail.png" width="100" height="100"></div></a> 
                 <div class="item2"><a href="https://www.facebook.com/Micaela.atw?mibextid=ZbWKwL"><img src="../assets/img/facebook.png" width="100" height="100"></div></a>
@@ -118,7 +119,7 @@
             </div>
 
                 <div class="texto paramore">
-                    <p> Esta pagina esta inspirada en una de mis canciones favoritas de Paramore! les dejo el video con subtitulos!</p>
+                    <h3> Esta pagina esta inspirada en una de mis canciones favoritas de Paramore! les dejo el video con subtitulos!</h3>
                     <div class="videosyt">
                         <div class="ratio ratio-16x9">
                             <iframe width="683" height="384" src="https://www.youtube.com/embed/fh0iV5A9YBk" title="Escape Route - Paramore (Sub. Español)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
