--- a/pages/viaja-sola.html
+++ b/pages/viaja-sola.html
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="viajes y carreras">
     <meta property="og:url" content="">
     <meta property="og:type" content="blog">
-    <meta property="og:image" content="https://postimg.cc/jD7WQwR0">
+    <meta property="og:image" content="https://i.postimg.cc/pL0Dvz7T/wepik-export-20230811181803-YQu-W.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:alt" content=" logo que incluye la Frase: una ruta de escape con un dibujo de una moto y un avion de papel">
     <meta property="og:image:width" content="1200">
