--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="cards2">
                     <div class="clase-img-blog1sentada">
-                        <img src="./assets/img/sentada.ruta.jpg">
+                        <img src="./assets/img/SENTADA.RUTA.jpg">
                         <a href="./pages/blog.html">
                             <h3>Mis viajes Sola, en familia,con amigos y pareja!</h3>
                         </a>
